Fix mobile header z-index

--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -4500,7 +4500,7 @@ p{
   height:60px;
   width:100%;
   background-color:#000;
-  z-index:3;
+  z-index:500;
 }
 @media (min-width:1280px){
   .mobile-header{
