--- a/resources/frontend/sass/themes/_header.scss
+++ b/resources/frontend/sass/themes/_header.scss
@@ -37,7 +37,7 @@
   height: 60px;
   width: 100%;
   background-color: palette("black");
-  z-index: 3;
+  z-index: 500;
 
   @include media-over(xl) {
     display: none;
